--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/logging": "^9.6.0",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.15.4"
+    "firebase-functions": "^3.15.4",
+    "stripe": "^8.174.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
