--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/logging": "^9.6.0",
+    "@sendgrid/mail": "^7.4.7",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.15.4",
+    "firebase-functions": "^3.15.7",
     "stripe": "^8.174.0"
   },
   "devDependencies": {
