--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "@sendgrid/mail": "^7.4.7",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.16.0",
-    "stripe": "^8.174.0"
+    "stripe": "^8.174.0",
+    "twilio": "^3.71.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
