--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,8 @@
     "@google-cloud/logging": "^9.6.0",
     "@sendgrid/mail": "^7.4.7",
     "axios": "^0.21.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
