leaving for the trip

--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,13 @@
       "**/node_modules/**"
     ],
 
+    "rewrites": [
+      {
+        "source": "/test-taker/**",
+        "destination": "/test-taker.html"
+      }
+    ],
+
     "cleanUrls": true,
     "trailingSlash": false
   },
