--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,10 @@
       {
         "source": "/test-taker/**",
         "destination": "/test-taker.html"
+      },
+      {
+        "source": "/customer-dashboard/**",
+        "destination": "/customer-dashboard.html"
       }
     ],
 
