--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "emulator": "firebase emulators:start --only hosting"
+    "emulator": "firebase emulators:start --only hosting",
+    "hosting": "firebase deploy --only hosting"
   },
   "keywords": [],
   "author": "",
