--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "emulator": "firebase emulators:start --only hosting",
-    "hosting": "firebase deploy --only hosting"
+    "hosting": "webpack && firebase deploy --only hosting"
   },
   "keywords": [],
   "author": "",
