--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "watch": "webpack --watch",
     "emulator": "firebase emulators:start --only hosting",
     "hosting": "webpack && firebase deploy --only hosting"
   },
