--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "emulator": "firebase emulators:start --only hosting",
-    "hosting": "webpack && firebase deploy --only hosting"
+    "hosting": "webpack && firebase deploy --only hosting",
+    "preview": "firebase hosting:channel:deploy"
   },
   "keywords": [],
   "author": "",
