--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "emulator": "firebase emulators:start --only hosting",
-    "hosting": "webpack && firebase deploy --only hosting"
+    "force-hosting": "webpack && firebase deploy --only hosting",
+    "deploy": "branch=$(git rev-parse --symbolic-full-name --abbrev-ref HEAD); if [[ $branch == \"master\" ]]; then webpack && firebase deploy --only hosting; else echo \"You must be on master to deploy!\"; fi;"
   },
   "keywords": [],
   "author": "",
