--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,6 @@
       "**/.*",
       "**/node_modules/**"
     ],
-
     "rewrites": [
       {
         "source": "/test-taker/**",
@@ -17,7 +16,6 @@
         "destination": "/student-overview.html"
       }
     ],
-
     "cleanUrls": true,
     "trailingSlash": false
   },
@@ -46,5 +44,12 @@
     "storage": {
       "port": 9199
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
