--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "emulator": "firebase emulators:start --only hosting",
+    "emulator-hosting": "firebase emulators:start --only hosting",
+    "emulator": "firebase emulators:start",
+    "emulator-testTaker": "firebase emulators:start --import=emulator_data/test-taker",
     "force-hosting": "webpack && firebase deploy --only hosting",
     "deploy": "branch=$(git rev-parse --symbolic-full-name --abbrev-ref HEAD); if [[ $branch == \"master\" ]]; then webpack && firebase deploy --only hosting; else echo \"You must be on master to deploy!\"; fi;"
   },
